--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<![endif]-->
 
 	<!-- Favicons -->
-	<!-- <link rel="shortcut icon" href="img/favicon.ico"> -->
+	<!-- <link rel="shortcut icon" href="img/favicon.ico"> use it to add your favicon -->
 
 </head>
 <body id="home">
